--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.0",
     "astro": "^5.8.0",
+    "astro-icon": "^1.1.5",
     "firebase": "^11.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sass": "^1.89.0"
+    "sass": "^1.89.0",
+    "uuid": "^11.1.0"
   }
 }
