--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.4.0",
+    "@astropub/md": "^1.0.0",
     "astro": "^5.8.0",
     "astro-icon": "^1.1.5",
     "firebase": "^11.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "sass": "^1.89.0",
     "uuid": "^11.1.0"
   }
